--- a/launcher/deployment/fixtures/sample_projects.json
+++ b/launcher/deployment/fixtures/sample_projects.json
@@ -1,482 +1,257 @@
 [
 {
-  "pk": 1,
-  "model": "deployment.project",
-  "fields": {
-    "status": "Active",
-    "name": "Wordpress",
-    "survey_form_url": "",
-    "database": "mysql-5.1",
-    "github_url": "https://github.com/openshift/wordpress-example",
-    "version": "php-5.3",
-    "default_username": "",
-    "default_password": "",
-    "slug": "wordpress"
-  }
+    "pk": 1,
+    "model": "deployment.project",
+    "fields": {
+        "status": "Active",
+        "slug": "wordpress",
+        "name": "Wordpress",
+        "survey_form_url": "",
+        "env_vars": "",
+        "image_name": "jbfink/wordpress",
+        "trial_duration": 60,
+        "github_url": "https://github.com/jbfink/docker-wordpress",
+        "default_username": "",
+        "default_password": "",
+        "ports": "80"
+    }
 },
 {
-  "pk": 2,
-  "model": "deployment.project",
-  "fields": {
-    "status": "Active",
-    "name": "Drupal",
-    "survey_form_url": "",
-    "database": "mysql-5.1",
-    "github_url": "https://github.com/openshift/drupal-quickstart.git",
-    "version": "php-5.3, cron",
-    "default_username": "admin",
-    "default_password": "openshift_changeme",
-    "slug": "drupal"
-  }
+    "pk": 2,
+    "model": "deployment.project",
+    "fields": {
+        "status": "Active",
+        "slug": "etherpad",
+        "name": "Etherpad",
+        "survey_form_url": "",
+        "env_vars": "",
+        "image_name": "arcus/etherpad",
+        "trial_duration": 60,
+        "github_url": "https://github.com/arcus-io/docker-etherpad",
+        "default_username": "",
+        "default_password": "",
+        "ports": "9001"
+    }
 },
 {
-  "pk": 4,
-  "model": "deployment.project",
-  "fields": {
-    "status": "Active",
-    "name": "Mediawiki",
-    "survey_form_url": "",
-    "database": "mysql-5.1",
-    "github_url": "git://github.com/openshift/mediawiki-example.git",
-    "version": "php-5.3",
-    "default_username": "admin",
-    "default_password": "OpenShiftAdmin",
-    "slug": "mediawiki"
-  }
+    "pk": 3,
+    "model": "deployment.project",
+    "fields": {
+        "status": "Inactive",
+        "slug": "owncloud",
+        "name": "Owncloud",
+        "survey_form_url": "",
+        "env_vars": "",
+        "image_name": "yankcrime/owncloud",
+        "trial_duration": 60,
+        "github_url": "https://github.com/yankcrime/dockerfiles",
+        "default_username": "",
+        "default_password": "",
+        "ports": "443"
+    }
 },
 {
-  "pk": 5,
-  "model": "deployment.project",
-  "fields": {
-    "status": "Active",
-    "name": "Dokuwiki",
-    "survey_form_url": "",
-    "database": "",
-    "github_url": "git://github.com/openshift/dokuwiki-quickstart.git",
-    "version": "php-5.3",
-    "default_username": "admin",
-    "default_password": "OpenShiftAdmin",
-    "slug": "dokuwiki"
-  }
+    "pk": 5,
+    "model": "deployment.project",
+    "fields": {
+        "status": "Active",
+        "slug": "drupal",
+        "name": "Drupal 7",
+        "survey_form_url": "",
+        "env_vars": "",
+        "image_name": "ricardoamaro/drupal-lamp",
+        "trial_duration": 60,
+        "github_url": "https://github.com/ricardoamaro/docker-drupal",
+        "default_username": "admin",
+        "default_password": "admin",
+        "ports": "80"
+    }
 },
 {
-  "pk": 6,
-  "model": "deployment.project",
-  "fields": {
-    "status": "Active",
-    "name": "Elgg",
-    "survey_form_url": "",
-    "database": "mysql-5.1",
-    "github_url": "git://github.com/openshift/elgg-openshift-quickstart.git",
-    "version": "php-5.3",
-    "default_username": "",
-    "default_password": "",
-    "slug": "elgg"
-  }
+    "pk": 7,
+    "model": "deployment.project",
+    "fields": {
+        "status": "Inactive",
+        "slug": "drupal-8",
+        "name": "Drupal 8",
+        "survey_form_url": "",
+        "env_vars": "",
+        "image_name": "nickgs/drupal8",
+        "trial_duration": 60,
+        "github_url": "https://github.com/nickgs/trydrupal8",
+        "default_username": "admin",
+        "default_password": "test",
+        "ports": "80"
+    }
 },
 {
-  "pk": 7,
-  "model": "deployment.project",
-  "fields": {
-    "status": "Active",
-    "name": "Codeigniter",
-    "survey_form_url": "",
-    "database": "mysql-5.1",
-    "github_url": "git://github.com/openshift/CodeIgniterQuickStart.git",
-    "version": "php-5.3",
-    "default_username": "",
-    "default_password": "",
-    "slug": "codeigniter"
-  }
+    "pk": 8,
+    "model": "deployment.project",
+    "fields": {
+        "status": "Inactive",
+        "slug": "magento",
+        "name": "Magento",
+        "survey_form_url": "",
+        "env_vars": "",
+        "image_name": "dmahlow/magento",
+        "trial_duration": 60,
+        "github_url": "https://github.com/dmahlow/docker-magento/",
+        "default_username": "",
+        "default_password": "",
+        "ports": "80"
+    }
 },
 {
-  "pk": 8,
-  "model": "deployment.project",
-  "fields": {
-    "status": "Active",
-    "name": "Piwik",
-    "survey_form_url": "",
-    "database": "mysql-5.1",
-    "github_url": "git://github.com/openshift/piwik-openshift-quickstart.git",
-    "version": "php-5.3",
-    "default_username": "",
-    "default_password": "",
-    "slug": "piwik"
-  }
+    "pk": 11,
+    "model": "deployment.project",
+    "fields": {
+        "status": "Inactive",
+        "slug": "ghost",
+        "name": "Ghost",
+        "survey_form_url": "",
+        "env_vars": "",
+        "image_name": "livebytes/docker-ghost",
+        "trial_duration": 60,
+        "github_url": "https://github.com/livebytes/docker-ghost",
+        "default_username": "",
+        "default_password": "",
+        "ports": "2368"
+    }
 },
 {
-  "pk": 9,
-  "model": "deployment.project",
-  "fields": {
-    "status": "Active",
-    "name": "SQLBuddy",
-    "survey_form_url": "",
-    "database": "mysql-5.1",
-    "github_url": "git://github.com/openshift/sqlbuddy-openshift-quickstart.git",
-    "version": "php-5.3",
-    "default_username": "",
-    "default_password": "",
-    "slug": "sqlbuddy"
-  }
+    "pk": 12,
+    "model": "deployment.project",
+    "fields": {
+        "status": "Active",
+        "slug": "reviewboard",
+        "name": "Reviewboard",
+        "survey_form_url": "",
+        "env_vars": "",
+        "image_name": "ricardokirkner/reviewboard",
+        "trial_duration": 60,
+        "github_url": "https://github.com/reviewboard/reviewboard",
+        "default_username": "",
+        "default_password": "",
+        "ports": "80"
+    }
 },
 {
-  "pk": 10,
-  "model": "deployment.project",
-  "fields": {
-    "status": "Active",
-    "name": "IronMQ",
-    "survey_form_url": "",
-    "database": "",
-    "github_url": "git://github.com/openshift/ironmq-openshift-quickstart.git",
-    "version": "ruby-1.9",
-    "default_username": "",
-    "default_password": "",
-    "slug": "ironmq"
-  }
+    "pk": 13,
+    "model": "deployment.project",
+    "fields": {
+        "status": "Active",
+        "slug": "dokuwiki",
+        "name": "DokuWiki",
+        "survey_form_url": "",
+        "env_vars": "",
+        "image_name": "edwinschaap/dokuwiki",
+        "trial_duration": 60,
+        "github_url": "https://github.com/splitbrain/dokuwiki",
+        "default_username": "",
+        "default_password": "",
+        "ports": "80"
+    }
 },
 {
-  "pk": 12,
-  "model": "deployment.project",
-  "fields": {
-    "status": "Active",
-    "name": "MongoLab",
-    "survey_form_url": "",
-    "database": "",
-    "github_url": "https://github.com/mongolab/mongolab-openshift-quickstart",
-    "version": "nodejs-0.6",
-    "default_username": "",
-    "default_password": "",
-    "slug": "mongolab"
-  }
+    "pk": 14,
+    "model": "deployment.project",
+    "fields": {
+        "status": "Active",
+        "slug": "miro-community",
+        "name": "Miro Community",
+        "survey_form_url": "",
+        "env_vars": "",
+        "image_name": "appsembler/mirocommunity",
+        "trial_duration": 60,
+        "github_url": "https://github.com/appsembler/mirocommunity",
+        "default_username": "admin",
+        "default_password": "appsembler",
+        "ports": "80"
+    }
 },
 {
-  "pk": 13,
-  "model": "deployment.project",
-  "fields": {
-    "status": "Active",
-    "name": "OSQA",
-    "survey_form_url": "",
-    "database": "mysql-5.1",
-    "github_url": "git://github.com/openshift/OSQA-openshift-quickstart.git",
-    "version": "python-2.6",
-    "default_username": "",
-    "default_password": "",
-    "slug": "osqa"
-  }
+    "pk": 15,
+    "model": "deployment.project",
+    "fields": {
+        "status": "Hidden",
+        "slug": "treeio",
+        "name": "Tree.io",
+        "survey_form_url": "",
+        "env_vars": "",
+        "image_name": "appsembler/treeio",
+        "trial_duration": 60,
+        "github_url": "https://github.com/treeio/treeio",
+        "default_username": "admin",
+        "default_password": "admin",
+        "ports": "8000"
+    }
 },
 {
-  "pk": 16,
-  "model": "deployment.project",
-  "fields": {
-    "status": "Active",
-    "name": "ownCloud",
-    "survey_form_url": "",
-    "database": "mysql-5.1",
-    "github_url": "git://github.com/openshift/owncloud-openshift-quickstart.git",
-    "version": "php-5.3",
-    "default_username": "admin",
-    "default_password": "OpenShiftAdmin",
-    "slug": "owncloud"
-  }
+    "pk": 16,
+    "model": "deployment.project",
+    "fields": {
+        "status": "Active",
+        "slug": "ka-lite",
+        "name": "KA Lite",
+        "survey_form_url": "",
+        "env_vars": "",
+        "image_name": "appsembler/ka-lite",
+        "trial_duration": 60,
+        "github_url": "https://github.com/learningequality/ka-lite",
+        "default_username": "admin",
+        "default_password": "appsembler",
+        "ports": "8008"
+    }
 },
 {
-  "pk": 19,
-  "model": "deployment.project",
-  "fields": {
-    "status": "Active",
-    "name": "Rails",
-    "survey_form_url": "",
-    "database": "mysql-5.1",
-    "github_url": "git://github.com/openshift/rails-example.git",
-    "version": "ruby-1.9",
-    "default_username": "",
-    "default_password": "",
-    "slug": "rails"
-  }
+    "pk": 17,
+    "model": "deployment.project",
+    "fields": {
+        "status": "Active",
+        "slug": "edx-lms",
+        "name": "edX LMS",
+        "survey_form_url": "",
+        "env_vars": "MANDRILL_API_KEY=PbKaXYXtFA65okg8xSpLHg",
+        "image_name": "appsembler/edx-docker-microsite",
+        "trial_duration": 60,
+        "github_url": "https://github.com/appsembler/edx-platform/tree/fjukic/docker",
+        "default_username": "",
+        "default_password": "",
+        "ports": "18000"
+    }
 },
 {
-  "pk": 20,
-  "model": "deployment.project",
-  "fields": {
-    "status": "Active",
-    "name": "CapeDwarf",
-    "survey_form_url": "",
-    "database": "",
-    "github_url": "git://github.com/openshift/capedwarf-example.git",
-    "version": "jbossas-7",
-    "default_username": "",
-    "default_password": "",
-    "slug": "capedwarf"
-  }
+    "pk": 18,
+    "model": "deployment.project",
+    "fields": {
+        "status": "Active",
+        "slug": "pinry",
+        "name": "Pinry",
+        "survey_form_url": "",
+        "env_vars": "",
+        "image_name": "appsembler/pinry",
+        "trial_duration": 60,
+        "github_url": "https://github.com/pinry/pinry",
+        "default_username": "",
+        "default_password": "",
+        "ports": "80"
+    }
 },
 {
-  "pk": 21,
-  "model": "deployment.project",
-  "fields": {
-    "status": "Active",
-    "name": "Bottle",
-    "survey_form_url": "",
-    "database": "",
-    "github_url": "git://github.com/openshift/bottle-openshift-quickstart.git",
-    "version": "python-2.6",
-    "default_username": "",
-    "default_password": "",
-    "slug": "bottle"
-  }
-},
-{
-  "pk": 22,
-  "model": "deployment.project",
-  "fields": {
-    "status": "Active",
-    "name": "Redmine",
-    "survey_form_url": "",
-    "database": "mysql-5.1",
-    "github_url": "https://github.com/openshift/redmine-2.0-openshift-quickstart",
-    "version": "ruby-1.9",
-    "default_username": "admin",
-    "default_password": "admin",
-    "slug": "redmine"
-  }
-},
-{
-  "pk": 23,
-  "model": "deployment.project",
-  "fields": {
-    "status": "Active",
-    "name": "Magento",
-    "survey_form_url": "",
-    "database": "mysql-5.1",
-    "github_url": "git://github.com/openshift/magento-example.git",
-    "version": "php-5.3",
-    "default_username": "admin",
-    "default_password": "OpenShiftAdmin123",
-    "slug": "magento"
-  }
-},
-{
-  "pk": 24,
-  "model": "deployment.project",
-  "fields": {
-    "status": "Active",
-    "name": "NestaCMS",
-    "survey_form_url": "",
-    "database": "mysql-5.1",
-    "github_url": "https://github.com/openshift/nestacms-example",
-    "version": "ruby-1.9",
-    "default_username": "",
-    "default_password": "",
-    "slug": "nestacms"
-  }
-},
-{
-  "pk": 26,
-  "model": "deployment.project",
-  "fields": {
-    "status": "Active",
-    "name": "Joomla",
-    "survey_form_url": "",
-    "database": "mysql-5.1",
-    "github_url": "https://github.com/openshift/joomla-example",
-    "version": "php-5.3",
-    "default_username": "admin",
-    "default_password": "4dm1n",
-    "slug": "joomla"
-  }
-},
-{
-  "pk": 27,
-  "model": "deployment.project",
-  "fields": {
-    "status": "Active",
-    "name": "Reviewboard",
-    "survey_form_url": "",
-    "database": "mysql-5.1",
-    "github_url": "https://github.com/openshift/reviewboard-example",
-    "version": "python-2.7",
-    "default_username": "Admin",
-    "default_password": "OpenShiftAdmin",
-    "slug": "reviewboard"
-  }
-},
-{
-  "pk": 28,
-  "model": "deployment.project",
-  "fields": {
-    "status": "Active",
-    "name": "SugarCRM",
-    "survey_form_url": "",
-    "database": "mysql-5.1",
-    "github_url": "https://github.com/openshift/sugarcrm-example",
-    "version": "php-5.3",
-    "default_username": "admin",
-    "default_password": "admin",
-    "slug": "sugarcrm"
-  }
-},
-{
-  "pk": 29,
-  "model": "deployment.project",
-  "fields": {
-    "status": "Active",
-    "name": "Plone",
-    "survey_form_url": "",
-    "database": "",
-    "github_url": "https://github.com/kagesenshi/plone-openshift-quickstart",
-    "version": "python-2.7",
-    "default_username": "admin",
-    "default_password": "OpenShiftAdmin",
-    "slug": "plone"
-  }
-},
-{
-  "pk": 30,
-  "model": "deployment.project",
-  "fields": {
-    "status": "Active",
-    "name": "Ohmage",
-    "survey_form_url": "",
-    "database": "mysql-5.1",
-    "github_url": "https://github.com/stevenolen/ohmage-openshift-quickstart",
-    "version": "jbossews-2.0",
-    "default_username": "ohmage.admin",
-    "default_password": "ohmage.passwd",
-    "slug": "ohmage"
-  }
-},
-{
-  "pk": 31,
-  "model": "deployment.project",
-  "fields": {
-    "status": "Active",
-    "name": "phpBB",
-    "survey_form_url": "",
-    "database": "mysql-5.1",
-    "github_url": "https://github.com/openshift/phpbb-example",
-    "version": "php-5.3",
-    "default_username": "Admin",
-    "default_password": "OpenShiftAdmin",
-    "slug": "phpbb"
-  }
-},
-{
-  "pk": 32,
-  "model": "deployment.project",
-  "fields": {
-    "status": "Active",
-    "name": "Pyramid",
-    "survey_form_url": "",
-    "database": "",
-    "github_url": "https://github.com/kagesenshi/pyramid-buildout-openshift-quickstart",
-    "version": "python-2.7",
-    "default_username": "",
-    "default_password": "",
-    "slug": "pyramid"
-  }
-},
-{
-  "pk": 33,
-  "model": "deployment.project",
-  "fields": {
-    "status": "Active",
-    "name": "Anahita",
-    "survey_form_url": "http://appsembler.wufoo.com/forms/anahita-registration/",
-    "database": "mysql-5.1",
-    "github_url": "https://github.com/anahitasocial/anahita-openshift",
-    "version": "php-5.3",
-    "default_username": "admin",
-    "default_password": "j87op$oi89",
-    "slug": "anahita"
-  }
-},
-{
-  "pk": 34,
-  "model": "deployment.project",
-  "fields": {
-    "status": "Inactive",
-    "name": "PyramidMySQL",
-    "survey_form_url": "",
-    "database": "mysql-5.1",
-    "github_url": "https://github.com/lmacken/pyramid-openshift-quickstart",
-    "version": "python-2.7",
-    "default_username": "",
-    "default_password": "",
-    "slug": "pyramidmysql"
-  }
-},
-{
-  "pk": 35,
-  "model": "deployment.project",
-  "fields": {
-    "status": "Inactive",
-    "name": "Etherpad",
-    "survey_form_url": "",
-    "database": "mongodb-2.2",
-    "github_url": "https://github.com/openshift/etherpad-example",
-    "version": "nodejs-0.6",
-    "default_username": "",
-    "default_password": "",
-    "slug": "etherpad"
-  }
-},
-{
-  "pk": 36,
-  "model": "deployment.project",
-  "fields": {
-    "status": "Inactive",
-    "name": "Mezzanine",
-    "survey_form_url": "",
-    "database": "",
-    "github_url": "https://github.com/natea/mezzanine-openshift",
-    "version": "python-2.6",
-    "default_username": "admin",
-    "default_password": "default",
-    "slug": "mezzanine"
-  }
-},
-{
-  "pk": 37,
-  "model": "deployment.project",
-  "fields": {
-    "status": "Inactive",
-    "name": "Moodle",
-    "survey_form_url": "",
-    "database": "mysql-5.1",
-    "github_url": "https://github.com/burningTyger/openshift_moodle",
-    "version": "php-5.3",
-    "default_username": "",
-    "default_password": "",
-    "slug": "moodle"
-  }
-},
-{
-  "pk": 38,
-  "model": "deployment.project",
-  "fields": {
-    "status": "Inactive",
-    "name": "Red5",
-    "survey_form_url": "",
-    "database": "",
-    "github_url": "https://github.com/dzer6/openshift-red5-quickstart",
-    "version": "diy-0.1",
-    "default_username": "",
-    "default_password": "",
-    "slug": "red5"
-  }
-},
-{
-  "pk": 39,
-  "model": "deployment.project",
-  "fields": {
-    "status": "Inactive",
-    "name": "Trac",
-    "survey_form_url": "",
-    "database": "",
-    "github_url": "https://github.com/brianwcook/openshift-diy-trac",
-    "version": "diy-0.1",
-    "default_username": "",
-    "default_password": "",
-    "slug": "trac"
-  }
+    "pk": 19,
+    "model": "deployment.project",
+    "fields": {
+        "status": "Hidden",
+        "slug": "mezzanine",
+        "name": "Mezzanine",
+        "survey_form_url": "",
+        "env_vars": "",
+        "image_name": "appsembler/mezzanine",
+        "trial_duration": 60,
+        "github_url": "https://github.com/stephenmcd/mezzanine",
+        "default_username": "admin",
+        "default_password": "default",
+        "ports": "8000"
+    }
 }
 ]
