--- a/deploy/roles/nginx/templates/nginx_uwsgi.conf
+++ b/deploy/roles/nginx/templates/nginx_uwsgi.conf
@@ -23,16 +23,12 @@ server {
     }
 
     # Django static
-    location /site_media {
+    location /static {
         alias {{ django_static_dir }};
         expires 10d;
         autoindex off;
         access_log off;
         add_header Cache-Control "public";
-    }
-
-    location /jsi18n/ {
-        try_files /site_media/jsi18n.js /site_media/jsi18n.js;
     }
 
     location /nginx_stub_status {
