--- a/deploy/roles/supervisor/templates/supervisord.conf
+++ b/deploy/roles/supervisor/templates/supervisord.conf
@@ -28,7 +28,8 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 [program:{{app_name}}]
 directory={{git_repo_dir}}
 command={{venv_dir}}/bin/newrelic-admin run-program uwsgi --ini /etc/uwsgi.ini
-environment=NEW_RELIC_CONFIG_FILE={{django_project_dir}}/newrelic.ini
+environment={% for k, v in django_env_vars.iteritems() %}{% if not loop.first %},{% endif %}{{ k }}="{{ v }}"{% endfor %}
+
 autostart=true
 autorestart=true
 redirect_stderr=true
