--- a/deploy/roles/supervisor/tasks/main.yml
+++ b/deploy/roles/supervisor/tasks/main.yml
@@ -11,7 +11,7 @@
   file: path=/var/log/supervisor state=directory
 
 - name: Copy supervisor upstart script
-  copy: src=supervisord.conf dest=/etc/init/
+  copy: src=supervisord.conf dest=/etc/init/ owner=root group=root
 
 - name: Start supervisord
   service: name=supervisord state=started
