celery workers added to supervisor

--- a/deploy/roles/supervisor/templates/supervisord.conf
+++ b/deploy/roles/supervisor/templates/supervisord.conf
@@ -46,6 +46,28 @@ stderr_logfile_backups=10     ; # of stderr logfile backups (default 10)
 stderr_capture_maxbytes=1MB   ; number of bytes in 'capturemode' (default 0)
 stderr_events_enabled=false   ; emit events on stderr writes (default false)
 
+[program:celery]
+command={{venv_dir}}/bin/python manage.py celery worker --settings=launcher.settings.production --autoscale=6,3
+directory={{django_project_dir}}
+stdout_logfile=/var/log/supervisor/celery.log
+stderr_logfile=/var/log/supervisor/celery.log
+autostart=true
+autorestart=true
+startsecs=10
+stopwaitsecs = 60
+killasgroup=true
+
+[program:celery-beat]
+command={{venv_dir}}/bin/python manage.py celery beat -s /opt/celerybeat-schedule --settings=launcher.settings.production
+directory={{django_project_dir}}
+stdout_logfile=/var/log/supervisor/celery-beat.log
+stderr_logfile=/var/log/supervisor/celery-beat.log
+autostart=true
+autorestart=true
+startsecs=10
+stopwaitsecs = 60
+killasgroup=true
+
 [program:newrelic-plugin]
 command=newrelic_plugin_agent -c /etc/newrelic/newrelic_plugin_agent.cfg -f
 autostart=true
