memcached task updated

--- a/deploy/roles/memcached/tasks/main.yml
+++ b/deploy/roles/memcached/tasks/main.yml
@@ -6,6 +6,9 @@
     - memcached
     - libmemcached-dev
 
+- name: Start memcached
+  service: name=memcached state=started
+
 - name: Copy memcached.conf to server
   template: src=memcached.conf dest=/etc/memcached.conf
   notify:
