--- a/deploy/roles/supervisor/templates/supervisord.conf
+++ b/deploy/roles/supervisor/templates/supervisord.conf
@@ -47,8 +47,10 @@ stderr_capture_maxbytes=1MB   ; number of bytes in 'capturemode' (default 0)
 stderr_events_enabled=false   ; emit events on stderr writes (default false)
 
 [program:celery]
-command={{venv_dir}}/bin/python manage.py celery worker --settings=launcher.settings.production --autoscale=6,3
+command={{venv_dir}}/bin/python manage.py celery worker --settings=launcher.settings.production --autoscale=6,3 -l info
 directory={{django_project_dir}}
+environment={% for k, v in django_env_vars.iteritems() %}{% if not loop.first %},{% endif %}{{ k }}="{{ v }}"{% endfor %}
+
 stdout_logfile=/var/log/supervisor/celery.log
 stderr_logfile=/var/log/supervisor/celery.log
 autostart=true
@@ -58,8 +60,10 @@ stopwaitsecs = 60
 killasgroup=true
 
 [program:celery-beat]
-command={{venv_dir}}/bin/python manage.py celery beat -s /opt/celerybeat-schedule --settings=launcher.settings.production
+command={{venv_dir}}/bin/python manage.py celery beat -s /opt/celerybeat-schedule --settings=launcher.settings.production -l info
 directory={{django_project_dir}}
+environment={% for k, v in django_env_vars.iteritems() %}{% if not loop.first %},{% endif %}{{ k }}="{{ v }}"{% endfor %}
+
 stdout_logfile=/var/log/supervisor/celery-beat.log
 stderr_logfile=/var/log/supervisor/celery-beat.log
 autostart=true
