--- a/deploy/roles/app_deployment/tasks/main.yml
+++ b/deploy/roles/app_deployment/tasks/main.yml
@@ -2,12 +2,17 @@
 
 - name: Clone app repo
   git: repo={{git_repo_url}} dest={{git_repo_dir}} version={{git_repo_branch}}
+  notify:
+    - reload supervisor config
+  tags: code
 
 - name: Clear pip build dir
   file: path=/opt/venv/build state=absent
+  tags: code
 
 - name: Create a virtual env and install app requirements
   pip: requirements='requirements/production.txt' virtualenv=/opt/venv chdir={{git_repo_dir}}
+  tags: code
 
 - name: Install extra python libraries
   pip: name={{item}} virtualenv=/opt/venv state=latest
@@ -24,6 +29,7 @@
       pythonpath={{django_project_dir}}
       virtualenv={{venv_dir}}
   environment: django_env_vars
+  tags: code
 
 - name: Run syncdb
   django_manage: >
@@ -33,6 +39,7 @@
       pythonpath={{django_project_dir}}
       virtualenv={{venv_dir}}
   environment: django_env_vars
+  tags: code
 
 - name: Run DB migrations
   django_manage: >
@@ -42,6 +49,7 @@
       pythonpath={{django_project_dir}}
       virtualenv={{venv_dir}}
   environment: django_env_vars
+  tags: code
 
 #- name: Run offline compression of the assets
 #  django_manage: >
