--- a/deploy/roles/pythondev/tasks/main.yml
+++ b/deploy/roles/pythondev/tasks/main.yml
@@ -16,3 +16,11 @@
 - name: Install virtualenv.
   pip: name=virtualenv state=latest
 
+- name: Add node.js repo
+  apt_repository: repo='ppa:chris-lea/node.js'
+
+- name: Install node.ks
+  apt: name=nodejs state=latest
+
+- name: Install Bower
+  npm: name=bower global=yes state=latest
