--- a/deploy/roles/supervisor/templates/supervisord.conf
+++ b/deploy/roles/supervisor/templates/supervisord.conf
@@ -47,7 +47,7 @@ stderr_capture_maxbytes=1MB   ; number of bytes in 'capturemode' (default 0)
 stderr_events_enabled=false   ; emit events on stderr writes (default false)
 
 [program:celery]
-command={{venv_dir}}/bin/python manage.py celery worker --settings=launcher.settings.production --autoscale=6,3 -l info
+command={{venv_dir}}/bin/celery worker -A deployment.tasks --autoscale=6,3 -l info --uid celery --pidfile=/opt/celery/celery.pid
 directory={{django_project_dir}}
 environment={% for k, v in django_env_vars.iteritems() %}{% if not loop.first %},{% endif %}{{ k }}="{{ v }}"{% endfor %}
 
@@ -60,7 +60,7 @@ stopwaitsecs = 60
 killasgroup=true
 
 [program:celery-beat]
-command={{venv_dir}}/bin/python manage.py celery beat -s /opt/celerybeat-schedule --settings=launcher.settings.production -l info
+command={{venv_dir}}/bin/celery beat -A deployment.tasks -s /opt/celery/celerybeat-schedule -l info --uid celery --pidfile=/opt/celery/celerybeat.pid
 directory={{django_project_dir}}
 environment={% for k, v in django_env_vars.iteritems() %}{% if not loop.first %},{% endif %}{{ k }}="{{ v }}"{% endfor %}
 
