--- a/deploy/roles/pythondev/tasks/main.yml
+++ b/deploy/roles/pythondev/tasks/main.yml
@@ -25,6 +25,9 @@
 - name: Install Bower
   npm: name=bower global=yes state=latest
 
+- name: Install Yuglify
+  npm: name=yuglify global=yes state=latest
+
 - name: Create celery user
   user: name=celery comment="Celery user" createhome=no
 
