--- a/deploy/roles/nginx/templates/nginx_uwsgi.conf
+++ b/deploy/roles/nginx/templates/nginx_uwsgi.conf
@@ -22,13 +22,21 @@ server {
         add_header Cache-Control "public";
     }
 
-    # Django static
-    location /static {
-        alias {{ django_static_dir }};
+    location ~ /static/(?P<file>.*) {
+        root /opt/launcher/launcher/collected_static;
+        try_files /$file =404;
         expires 10d;
         autoindex off;
         access_log off;
-        add_header Cache-Control "public";
+
+        # Set django-pipelined files to maximum cache time
+        location ~ "/static/(?P<collected>.*\.[0-9a-f]{12}\..*)" {
+            expires max;
+            try_files /$collected =404;
+        }
+
+        # Expire other static files immediately (there should be very few / none of these)
+        expires epoch;
     }
 
     location /nginx_stub_status {
