don't serve favicon

--- a/deploy/roles/nginx/templates/nginx_uwsgi.conf
+++ b/deploy/roles/nginx/templates/nginx_uwsgi.conf
@@ -40,8 +40,15 @@ server {
     }
 
     location /nginx_stub_status {
-      stub_status on;
+        stub_status on;
     }
+
+    location = /favicon.ico {
+        return 204;
+        access_log     off;
+        log_not_found  off;
+}
+
 
     # Finally, send all non-media requests to the Django server.
     location / {
