ignore requests that don't contain the hostname

--- a/deploy/roles/nginx/templates/nginx_uwsgi.conf
+++ b/deploy/roles/nginx/templates/nginx_uwsgi.conf
@@ -4,6 +4,13 @@ upstream django {
     server unix:///var/run/uwsgi.sock;
 }
 
+# default, catch all server
+server {
+    listen 80 ;
+    server_name "";
+    return 404;
+}
+
 # configuration of the server
 server {
     listen 80 default_server;
@@ -12,6 +19,11 @@ server {
 
     # max upload size
     client_max_body_size 15M;   # adjust to taste
+
+    ## Deny illegal Host headers
+    if ($host !~* ^({{server_name}})$ ) {
+        return 444;
+    }
 
     # Django media
     location /media  {
