--- a/deploy/roles/nginx/templates/nginx.conf
+++ b/deploy/roles/nginx/templates/nginx.conf
@@ -26,6 +26,8 @@ http {
 
     keepalive_timeout  30;
 
+    server_names_hash_bucket_size  64;
+
     open_file_cache max=200000 inactive=20s;
     open_file_cache_valid 30s;
     open_file_cache_min_uses 2;
