updated Vagrantfile to work with version 1.5 of vagrant

--- a/deploy/Vagrantfile
+++ b/deploy/Vagrantfile
@@ -41,7 +41,8 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
   config.vm.provision "ansible" do |ansible|
     ansible.playbook = "site.yml"
-    ansible.inventory_path = "./vagrant"
+    ansible.inventory_path = "vagrant"
     ansible.sudo = true
+    ansible.limit = 'all'
   end
 end
