add intercom keys to secret_keys

--- a/deploy/secret_vars.yml.example
+++ b/deploy/secret_vars.yml.example
@@ -2,6 +2,8 @@
 customerio_api_key:
 customerio_site_id:
 django_debug: False
+intercom_app_id:
+intercom_api_key:
 mandrill_api_key:
 newrelic_license_key:
 pusher_app_id:
@@ -28,6 +30,8 @@ django_env_vars: {
   CUSTOMERIO_SITE_ID: "{{customerio_site_id}}",
   CUSTOMERIO_API_KEY: "{{customerio_api_key}}",
   DEBUG: "{{django_debug}}",
+  INTERCOM_APP_ID: "{{intercom_app_id}}",
+  INTERCOM_API_KEY: "{{intercom_api_key}}",
   MANDRILL_API_KEY: "{{mandrill_api_key}}",
   NEW_RELIC_CONFIG_FILE: "{{django_project_dir}}/newrelic.ini",
   POSTGRES_USER: "{{postgres_user}}",
