--- a/deploy/secret_vars.yml.example
+++ b/deploy/secret_vars.yml.example
@@ -4,6 +4,7 @@ customerio_site_id:
 django_debug: False
 intercom_app_id:
 intercom_api_key:
+intercom_edx_app_id:
 mandrill_api_key:
 newrelic_license_key:
 pusher_app_id:
@@ -32,6 +33,7 @@ django_env_vars: {
   DEBUG: "{{django_debug}}",
   INTERCOM_APP_ID: "{{intercom_app_id}}",
   INTERCOM_API_KEY: "{{intercom_api_key}}",
+  INTERCOM_EDX_APP_ID: "{{intercom_edx_app_id}}",
   MANDRILL_API_KEY: "{{mandrill_api_key}}",
   NEW_RELIC_CONFIG_FILE: "{{django_project_dir}}/newrelic.ini",
   POSTGRES_USER: "{{postgres_user}}",
