don't load sample projects

--- a/deploy/roles/app_deployment/tasks/main.yml
+++ b/deploy/roles/app_deployment/tasks/main.yml
@@ -64,6 +64,6 @@
       virtualenv={{venv_dir}}
   with_items:
     - admin_user.json
-    - sample_projects.json
+    #- sample_projects.json
   environment: django_env_vars
   tags: code
