enable intercom app secret for edx (secure mode)

--- a/deploy/secret_vars.yml.example
+++ b/deploy/secret_vars.yml.example
@@ -5,6 +5,7 @@ django_debug: False
 intercom_app_id:
 intercom_api_key:
 intercom_edx_app_id:
+intercom_edx_app_secret:
 mandrill_api_key:
 newrelic_license_key:
 pusher_app_id:
@@ -34,6 +35,7 @@ django_env_vars: {
   INTERCOM_APP_ID: "{{intercom_app_id}}",
   INTERCOM_API_KEY: "{{intercom_api_key}}",
   INTERCOM_EDX_APP_ID: "{{intercom_edx_app_id}}",
+  INTERCOM_EDX_APP_SECRET: "{{intercom_edx_app_secret}}",
   MANDRILL_API_KEY: "{{mandrill_api_key}}",
   NEW_RELIC_CONFIG_FILE: "{{django_project_dir}}/newrelic.ini",
   POSTGRES_USER: "{{postgres_user}}",
