separated ansible playbook and vagrantfile into docker and launcher servers

--- a/deploy/site.yml
+++ b/deploy/site.yml
@@ -1,18 +1,3 @@
 ---
-# file: site.yml
-- hosts: server
-  remote_user: "{{remote_user}}"
-  gather_facts: false
-  vars_files:
-    - secret_vars.yml
-  roles:
-    - common
-    - pythondev
-    - postgresql
-    - memcached
-    - nginx
-    - uwsgi
-    - redis
-    - app_deployment
-    - newrelic
-    - supervisor
+- include: launcher.yml
+- include: docker.yml
