secret keys per environment

--- a/deploy/Vagrantfile
+++ b/deploy/Vagrantfile
@@ -24,12 +24,12 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
         # Use VBoxManage to customize the VM. For example to change memory:
         vb.customize ["modifyvm", :id, "--memory", "1024"]
     end
-    config.vm.provision "ansible" do |ansible|
+    launcher.vm.provision "ansible" do |ansible|
         ansible.playbook = "site.yml"
-        ansible.inventory_path = "vagrant"
+        ansible.inventory_path = "hosts/vagrant/inventory"
         ansible.sudo = true
-        ansible.limit = 'all'
     end
+  end
 
   config.vm.define "docker" do |docker|
     docker.vm.network :private_network, ip: "192.168.33.20"
@@ -37,11 +37,11 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
         # Use VBoxManage to customize the VM. For example to change memory:
         vb.customize ["modifyvm", :id, "--memory", "1024"]
     end
-    config.vm.provision "ansible" do |ansible|
+    docker.vm.provision "ansible" do |ansible|
         ansible.playbook = "site.yml"
-        ansible.inventory_path = "vagrant"
+        ansible.inventory_path = "hosts/vagrant/inventory"
         ansible.sudo = true
-        ansible.limit = 'all'
     end
+  end
 
 end
