--- a/deploy/launcher.yml
+++ b/deploy/launcher.yml
@@ -3,7 +3,7 @@
   remote_user: "{{remote_user}}"
   gather_facts: false
   vars_files:
-    - secret_vars.yml
+    - hosts/{{environment}}/secret_vars.yml
   roles:
     - common
     - docker
