added docker pull module for ansible

--- a/deploy/roles/docker/tasks/images.yml
+++ b/deploy/roles/docker/tasks/images.yml
@@ -1,4 +1,4 @@
 ---
 
 - name: Pull required docker images from registry
-  docker_image: name=appsembler/pinry state=present
+  docker_pull: repo=appsembler/pinry state=present
