--- a/deploy/launcher.yml
+++ b/deploy/launcher.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: launcher
   remote_user: "{{remote_user}}"
-  gather_facts: false
+  gather_facts: true
   vars_files:
     - hosts/{{environment}}/secret_vars.yml
   roles:
@@ -16,3 +16,5 @@
     - app_deployment
     - newrelic
     - supervisor
+    - {role: hipache, tags: hipache}
+    - {role: shipyard, tags: shipyard}
