--- a/deploy/roles/nginx/templates/nginx_uwsgi.conf
+++ b/deploy/roles/nginx/templates/nginx_uwsgi.conf
@@ -5,23 +5,23 @@ upstream django {
 }
 
 # default, catch all server
-server {
-    listen 80 ;
-    server_name "";
-    return 404;
-}
+#server {
+#    listen 8000 ;
+#    server_name "";
+#    return 404;
+#}
 
 # configuration of the server
 server {
-    listen 80 default_server;
-    server_name {{ server_name }};
+    listen 8000 default_server;
+    server_name {{ app_url }};
     charset     utf-8;
 
     # max upload size
     client_max_body_size 15M;   # adjust to taste
 
     ## Deny illegal Host headers
-    if ($host !~* ^({{server_name}})$ ) {
+    if ($host !~* ^({{app_url}})$ ) {
         return 444;
     }
 
