--- a/deploy/roles/pythondev/tasks/main.yml
+++ b/deploy/roles/pythondev/tasks/main.yml
@@ -3,8 +3,18 @@
 - name: Update python-setuptools
   pip: name=setuptools state=latest extra_args='--no-use-wheel'
 
-- name: Install virtualenv.
-  pip: name=virtualenv state=latest
+- name: Install virtualenv and virtualenvwrapper
+  pip: name={{item}} state=latest
+  with_items:
+    - virtualenv
+    - virtualenvwrapper
+
+- name: Set up virtualenvwrapper
+  lineinfile: dest=/root/.bashrc line="{{item}}" state=present
+  with_items:
+    - "export WORKON_HOME='/opt/venv/'"
+    - "export PROJECT_HOME='/opt/'"
+    - "source /usr/local/bin/virtualenvwrapper.sh"
 
 - name: Add node.js repo
   apt_repository: repo='ppa:chris-lea/node.js'
