--- a/deploy/Vagrantfile
+++ b/deploy/Vagrantfile
@@ -16,10 +16,15 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   # Bridged networks make the machine appear as another physical device on
   # your network.
   config.vm.network :public_network
+  config.dns.tld = "dev"
+
 
   config.vm.define "launcher" do |launcher|
     launcher.vm.network :forwarded_port, guest: 80, host: 8080
     launcher.vm.network :private_network, ip: "192.168.33.10"
+    launcher.vm.hostname = "launcher"
+    launcher.dns.patterns = [/^launcher.dev$/, /^.*demo.dev$/]
+
     launcher.vm.provider :virtualbox do |vb|
         # Use VBoxManage to customize the VM. For example to change memory:
         vb.customize ["modifyvm", :id, "--memory", "1024"]
@@ -28,11 +33,14 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
         ansible.playbook = "site.yml"
         ansible.inventory_path = "hosts/vagrant/inventory"
         ansible.sudo = true
+        #ansible.tags = ['hipache', 'shipyard']
     end
   end
 
   config.vm.define "docker" do |docker|
     docker.vm.network :private_network, ip: "192.168.33.20"
+    docker.vm.hostname = "docker"
+
     docker.vm.provider :virtualbox do |vb|
         # Use VBoxManage to customize the VM. For example to change memory:
         vb.customize ["modifyvm", :id, "--memory", "1024"]
