--- a/deploy/hosts/production/secret_vars.yml.example
+++ b/deploy/hosts/production/secret_vars.yml.example
@@ -1,10 +1,8 @@
-app_name:
-app_url:
-
 # django settings
 customerio_api_key:
 customerio_site_id:
 django_debug: False
+django_settings_module: launcher.settings.production
 intercom_app_id:
 intercom_api_key:
 intercom_edx_app_id:
@@ -20,6 +18,9 @@ sentry_dsn:
 
 
 # shipyard config
+demo_apps_custom_domain:
+hipache_redis_ip:
+hipache_redis_port:
 shipyard_host:
 shipyard_user:
 shipyard_key:
@@ -35,6 +36,10 @@ django_env_vars: {
   CUSTOMERIO_SITE_ID: "{{customerio_site_id}}",
   CUSTOMERIO_API_KEY: "{{customerio_api_key}}",
   DEBUG: "{{django_debug}}",
+  DEMO_APPS_CUSTOM_DOMAIN: "{{demo_apps_custom_domain}}",
+  DJANGO_SETTINGS_MODULE: "{{django_settings_module}}",
+  HIPACHE_REDIS_IP: "{{hipache_redis_ip}}",
+  HIPACHE_REDIS_PORT: "{{hipache_redis_port}}",
   INTERCOM_APP_ID: "{{intercom_app_id}}",
   INTERCOM_API_KEY: "{{intercom_api_key}}",
   INTERCOM_EDX_APP_ID: "{{intercom_edx_app_id}}",
@@ -46,7 +51,6 @@ django_env_vars: {
   PUSHER_APP_ID: "{{pusher_app_id}}",
   PUSHER_APP_KEY: "{{pusher_app_key}}",
   PUSHER_APP_SECRET: "{{pusher_app_secret}}",
-  REDIS_PASSWORD: "{{redis_password}}",
   SECRET_KEY: "{{secret_key}}",
   SENTRY_DSN: "{{sentry_dsn}}",
   SHIPYARD_HOST: "{{shipyard_host}}",
