--- a/deploy/hosts/vagrant/secret_vars.yml.example
+++ b/deploy/hosts/vagrant/secret_vars.yml.example
@@ -2,6 +2,7 @@
 customerio_api_key:
 customerio_site_id:
 django_debug: False
+django_settings_module: launcher.settings.production
 intercom_app_id:
 intercom_api_key:
 intercom_edx_app_id:
@@ -36,6 +37,7 @@ django_env_vars: {
   CUSTOMERIO_API_KEY: "{{customerio_api_key}}",
   DEBUG: "{{django_debug}}",
   DEMO_APPS_CUSTOM_DOMAIN: "{{demo_apps_custom_domain}}",
+  DJANGO_SETTINGS_MODULE: "{{django_settings_module}}",
   HIPACHE_REDIS_IP: "{{hipache_redis_ip}}",
   HIPACHE_REDIS_PORT: "{{hipache_redis_port}}",
   INTERCOM_APP_ID: "{{intercom_app_id}}",
