update docker upstart scripts

--- a/deploy/roles/shipyard/files/upstart_shipyard.conf
+++ b/deploy/roles/shipyard/files/upstart_shipyard.conf
@@ -1,6 +1,6 @@
 description "Shipyard container"
 author "Filip Jukić <filip@appsembler.com>"
-start on filesystem and started docker and started rethinkdb
+start on started rethinkdb
 stop on runlevel [!2345]
 respawn
 script
