--- a/deploy/roles/hipache/files/upstart_hipache.conf
+++ b/deploy/roles/hipache/files/upstart_hipache.conf
@@ -1,6 +1,6 @@
 description "Hipache container"
 author "Filip Jukić <filip@appsembler.com>"
-start on filesystem and started docker
+start on started docker
 stop on runlevel [!2345]
 respawn
 script
