--- a/deploy/roles/shipyard/files/upstart_rethinkdb.conf
+++ b/deploy/roles/shipyard/files/upstart_rethinkdb.conf
@@ -1,6 +1,6 @@
 description "RethinkDB container"
 author "Filip Jukić <filip@appsembler.com>"
-start on filesystem and started docker
+start on started docker
 stop on runlevel [!2345]
 respawn
 script
