--- a/deploy/roles/docker/files/launcher_docker.conf
+++ b/deploy/roles/docker/files/launcher_docker.conf
@@ -4,7 +4,7 @@
 #DOCKER="/usr/local/bin/docker"
 
 # Use DOCKER_OPTS to modify the daemon startup options.
-DOCKER_OPTS="-H unix:///var/run/docker.sock -r=false"
+#DOCKER_OPTS=""
 
 # If you need Docker to use an HTTP proxy, it can also be specified here.
 #export http_proxy="http://127.0.0.1:3128/"
