--- a/deploy/Vagrantfile
+++ b/deploy/Vagrantfile
@@ -23,7 +23,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     launcher.vm.network :forwarded_port, guest: 80, host: 8080
     launcher.vm.network :private_network, ip: "192.168.33.10"
     launcher.vm.hostname = "launcher"
-    launcher.dns.patterns = [/^launcher.dev$/, /^.*demo.dev$/]
+    launcher.dns.patterns = [/^launcher.dev$/, /^shipyard.dev$/, /^.*demo.dev$/]
 
     launcher.vm.provider :virtualbox do |vb|
         # Use VBoxManage to customize the VM. For example to change memory:
