--- a/deploy/roles/postgresql/handlers/main.yml
+++ b/deploy/roles/postgresql/handlers/main.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: start postgres
-  action: service name=postgresql state=started
+  service: name=postgresql state=started
 
 - name: restart postgres
-  action: service name=postgresql state=restarted
+  service: name=postgresql state=restarted
