--- a/deploy/roles/shipyard/files/upstart_rethinkdb.conf
+++ b/deploy/roles/shipyard/files/upstart_rethinkdb.conf
@@ -4,5 +4,6 @@ start on started docker
 stop on runlevel [!2345]
 respawn
 script
+  sleep 3
   /usr/bin/docker start -a shipyard-rethinkdb
 end script
