--- a/deploy/Vagrantfile
+++ b/deploy/Vagrantfile
@@ -33,6 +33,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
         ansible.playbook = "site.yml"
         ansible.inventory_path = "hosts/vagrant/inventory"
         ansible.sudo = true
+        #ansible.tags = ['hipache', 'shipyard']
     end
   end
 
