--- a/deploy/docker.yml
+++ b/deploy/docker.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: docker
   remote_user: "{{remote_user}}"
-  gather_facts: false
+  gather_facts: true
   roles:
     - common
     - docker
