use a separate redis container to allow saving the data

--- a/deploy/roles/hipache/files/upstart_redis.conf
+++ b/deploy/roles/hipache/files/upstart_redis.conf
@@ -1,9 +1,9 @@
 description "Hipache container"
 author "Filip Jukić <filip@appsembler.com>"
-start on started docker_hipache_redis
+start on started docker
 stop on runlevel [!2345]
 respawn
 script
   sleep 3
-  /usr/bin/docker start -a hipache
+  /usr/bin/docker start -a hipache-redis
 end script
