--- a/deploy/roles/newrelic/tasks/main.yml
+++ b/deploy/roles/newrelic/tasks/main.yml
@@ -12,33 +12,6 @@
             option=app_name
             value="Launcher"
 
-- name: Add New Relic GPG key
-  apt_key: url=https://download.newrelic.com/548C16BF.gpg state=present
+- include: server.yml
+  tags: newrelic_server
 
-- name: Add New Relic APT repo
-  apt_repository: repo='deb http://apt.newrelic.com/debian/ newrelic non-free' state=present update_cache=yes
-
-- name: Install New Relic server library
-  apt: name=newrelic-sysmond state=latest
-  when: environment != "vagrant"
-
-- name: Set New Relic license key
-  command: nrsysmond-config --set license_key={{newrelic_license_key}}
-  notify:
-    - reload new relic monitoring
-  when: environment != "vagrant"
-
-- name: Start New Relic monitoring service
-  service: name=newrelic-sysmond state=started enabled=yes
-  when: environment != "vagrant"
-
-- name: Install plugin package
-  pip: name=newrelic-plugin-agent state=latest
-  when: environment != "vagrant"
-
-- name: Copy plugin configuration file
-  template: src=newrelic_plugin_agent.cfg dest=/etc/newrelic/newrelic_plugin_agent.cfg
-  when: environment != "vagrant"
-
-- name: Create log folder
-  file: path=/var/log/newrelic state=directory
