more granular newrelic role, disable plugins for now

--- a/deploy/docker.yml
+++ b/deploy/docker.yml
@@ -2,7 +2,9 @@
 - hosts: docker
   remote_user: "{{remote_user}}"
   gather_facts: true
+  vars_files:
+    - hosts/{{environment}}/secret_vars.yml
   roles:
     - common
     - docker
-    - {role: 'newrelic', tags: 'newrelic_server'}
+    - {role: 'newrelic', newrelic_server: true}
