--- a/deploy/roles/newrelic/tasks/main.yml
+++ b/deploy/roles/newrelic/tasks/main.yml
@@ -1,17 +1,8 @@
 ---
-
-- name: Install New Relic python library
-  pip: name=newrelic virtualenv={{venv_dir}} state=latest
-
-- name: Generate New Relic config
-  command: "{{venv_dir}}/bin/newrelic-admin generate-config {{newrelic_license_key}} newrelic.ini chdir={{django_project_dir}}"
-
-- name: Change the application name
-  ini_file: dest="{{django_project_dir}}/newrelic.ini"
-            section=newrelic
-            option=app_name
-            value="Launcher"
+- include: app.yml
+  tags: newrelic_server
+  when: newrelic_app is defined and newrelic_app == true
 
 - include: server.yml
   tags: newrelic_server
-
+  when: newrelic_server is defined and newrelic_server == true
