--- a/deploy/roles/newrelic/tasks/server.yml
+++ b/deploy/roles/newrelic/tasks/server.yml
@@ -20,13 +20,13 @@
   service: name=newrelic-sysmond state=started enabled=yes
   when: environment != "vagrant"
 
-- name: Install plugin package
-  pip: name=newrelic-plugin-agent state=latest
-  when: environment != "vagrant"
-
-- name: Copy plugin configuration file
-  template: src=newrelic_plugin_agent.cfg dest=/etc/newrelic/newrelic_plugin_agent.cfg
-  when: environment != "vagrant"
+#- name: Install plugin package
+#  pip: name=newrelic-plugin-agent state=latest
+#  when: environment != "vagrant"
+#
+#- name: Copy plugin configuration file
+#  template: src=newrelic_plugin_agent.cfg dest=/etc/newrelic/newrelic_plugin_agent.cfg
+#  when: environment != "vagrant"
 
 - name: Create log folder
   file: path=/var/log/newrelic state=directory
