pull phusion/baseimage by default

--- a/deploy/roles/docker/tasks/images.yml
+++ b/deploy/roles/docker/tasks/images.yml
@@ -1,4 +1,7 @@
 ---
 
 - name: Pull required docker images from registry
-  docker_pull: repo=appsembler/pinry state=present
+  docker_pull: repo={{item}} state=present
+  with_items:
+    - phusion/baseimage
+    - appsembler/pinry
