--- a/deploy/roles/supervisor/templates/supervisord.conf
+++ b/deploy/roles/supervisor/templates/supervisord.conf
@@ -47,7 +47,7 @@ stderr_capture_maxbytes=1MB   ; number of bytes in 'capturemode' (default 0)
 stderr_events_enabled=false   ; emit events on stderr writes (default false)
 
 [program:celery]
-command={{venv_dir}}/bin/celery worker -A deployment.tasks -c 2 -l info --uid celery --pidfile=/opt/celery/celery.pid
+command={{venv_dir}}/bin/celery worker -A deployment.tasks -c {{celery_workers}} -l info --uid celery --pidfile=/opt/celery/celery.pid
 directory={{django_project_dir}}
 environment={% for k, v in django_env_vars.iteritems() %}{% if not loop.first %},{% endif %}{{ k }}="{{ v }}"{% endfor %}
 
