Ansible now removes the old Hipache container
Reprovisioning Vagrant boxes often breaks the connection between
Hipache and Redis containers.

The temporary solution is to remove the old Hipache container and then
create a new one, correctly linked to Redis.

--- a/deploy/roles/hipache/tasks/main.yml
+++ b/deploy/roles/hipache/tasks/main.yml
@@ -1,5 +1,8 @@
 ---
 
+- name: Stop&remove the existing Hipache container, if there is one
+  docker: image=tutum/hipache name=hipache state=absent
+
 - name: Pull the Hipache image
   docker_pull: repo={{item.image_name}} tag={{item.tag}}
   with_items:
