--- a/deploy/roles/hipache/tasks/main.yml
+++ b/deploy/roles/hipache/tasks/main.yml
@@ -34,7 +34,7 @@
   command: redis-cli -p 63790 del frontend:{{shipyard_url}}
 
 - name: Insert Launcher DNS entry in hipache
-  command: redis-cli -p 63790 rpush frontend:{{app_url}} launcher http://{{ansible_default_ipv4['address']}}:8000
+  command: redis-cli -p 63790 rpush frontend:{{app_url}} launcher http://{{django_env_vars.LAUNCHER_IP}}:8000
 
 - name: Insert Shipyard DNS entry in hipache
-  command: redis-cli -p 63790 rpush frontend:{{shipyard_url}} launcher http://{{ansible_default_ipv4['address']}}:8080
+  command: redis-cli -p 63790 rpush frontend:{{shipyard_url}} launcher http://{{django_env_vars.LAUNCHER_IP}}:8080
