--- a/deploy/hosts/staging/secret_vars.yml.example
+++ b/deploy/hosts/staging/secret_vars.yml.example
@@ -33,6 +33,7 @@ postgres_password:
 # DO NOT EDIT THESE - they are needed for correctly setting env variables
 # edit the variables above and ones in group_vars/all
 django_env_vars: {
+  LAUNCHER_IP: "{{ansible_default_ipv4['address']}}",
   CUSTOMERIO_SITE_ID: "{{customerio_site_id}}",
   CUSTOMERIO_API_KEY: "{{customerio_api_key}}",
   DEBUG: "{{django_debug}}",
