Removed server monitoring from Vagrant boxes

--- a/deploy/docker.yml
+++ b/deploy/docker.yml
@@ -3,7 +3,7 @@
   remote_user: "{{remote_user}}"
   gather_facts: true
   vars_files:
-    - hosts/{{environment}}/secret_vars.yml
+    - hosts/{{deployment_environment}}/secret_vars.yml
   roles:
     - common
     - docker
